# stereo

./: CMakeLists.txt  README.md  light_tracking.cpp  main.cpp
include/: light_tracking.h
